[package]
name = "pcics"
version = "0.1.1"
authors = ["mbratchikov"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pepyaka/pcics"
documentation = "https://docs.rs/pcics"
homepage = "https://github.com/pepyaka/pcics"
description = "PCI configuration space access library"
categories = ["no-std", "hardware-support"]
edition = "2021"

[dependencies]
byte = "0.2.6"
displaydoc = "0.2.3"
modular-bitfield = "0.11.2"
derivative = { version = "2.2.0", features = ["use_core"] }

[dev-dependencies]
pretty_assertions = "1.2.0"

[lints.clippy]
new_without_default = "allow"
